# py5canvas

./: .gitignore  LICENSE  README.md  README.org  TODO.md  environment.yaml  pyproject.toml  requirements.txt  setup.py  upload.sh
.github/workflows/: publish-to-pypi.yml
docs/: README.md  canvas_api.md  canvas_api.org  create_doc.py  doc_gen.md  doc_gen.org
examples/: basic_animation.py  canvas_tutorial.ipynb  diffvg_test.py  face_landmarks.py  fonts.py  fullscreen.py  ga_hypercube.py  genetic_image.py  imgui_test.py  implot_example.py  julia.py  l_system.py  lissajous.py  logo_turtle_demo.py  mandelbrot.py  mediapipe_face_landmarks.py  mediapipe_hand_landmarks.py  mediapipe_pose_landmarks.py  mouse_drawing.py  noise_1d_1.py  noise_2d_1.py  noise_grid.py  notebook_tests.ipynb  osc.json  osc_example.maxpat  osc_example.py  parameters.py  screensaver.py  spirograph.py  test_framerate.py  text_animation.py  text_font.py  text_font_bounding_box.py  text_font_tests.ipynb  text_points.py  video_export.py  video_input.py
py5canvas/: README.org  __init__.py  canvas.py  create_dummy_globals.py  dummy_globals.py  geom.py  geometry.py  gfxui.py  globals.py  notebook.py  rumore.py  run_sketch.py  sketch_params.py  turtle.py
