[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py5canvas"
version = "1.0.6"
description = "Drawings and animations with a p5.js / Processing-like API."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "Daniel Berio", email = "drand48@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pillow",
  "PyOpenGL",
  "moderngl",
  "glfw",
  "pycairo",
  "matplotlib",
  "rumore",
  "easydict",
  "xdialog",
  "nanobind>=2.8.0",
  "slimgui",
  "platformdirs"
]

[project.scripts]
py5sketch = "py5canvas.run_sketch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["py5canvas*"]
